pprerko-team/pprerko-ambulance-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pprerko-ambulance-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: pprerko-ambulance-backend-label
  template:
    metadata:
      labels:
        pod: pprerko-ambulance-backend-label
    spec:
      containers:
        - name: pprerko-ambulance-backend-container
          image: xrericha/projekt-backend
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
