pprerko-team/pprerko-ambulance-backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pprerko-ambulance-backend
spec:
  type: ClusterIP
  selector:
    pod: pprerko-ambulance-backend-label
  ports:
    - name: webapi-s-port
      protocol: TCP
      port: 80
      targetPort: 8080
